--- a/journal-writings/modernized/16-various-subjects.adoc
+++ b/journal-writings/modernized/16-various-subjects.adoc
@@ -7,7 +7,9 @@ First Printed in the Year 1768
 
 [quote.scripture, , James 3:17]
 ____
-"`The wisdom that is from above, is first pure, then peaceable, gentle, and easy to be entreated, full of mercy and good fruits, without partiality, and without hypocrisy.`"
+"`The wisdom that is from above, is first pure, then peaceable,
+gentle, and easy to be entreated, full of mercy and good fruits,
+without partiality, and without hypocrisy.`"
 ____
 
 
