clean up scripture ref

--- a/journal-writings/modernized/12-chapter-10.adoc
+++ b/journal-writings/modernized/12-chapter-10.adoc
@@ -66,8 +66,7 @@ nor was this concern so weightily attended to, as I now believe it ought to have
 But of late years being further informed respecting the
 oppressions too generally exercised in these islands,
 and thinking often on the degrees there are in the connexions
-of interest and fellowship with the works of darkness,
-Ephe. 5:11.;
+of interest and fellowship with the works of darkness, Ephe. 5:11.;
 and feeling an increasing concern to be wholly
 given up to the leadings of the Holy Spirit,
 it has appeared to me, that the small gain I got by this branch of trade,
