fix invalid trailing hyphen

--- a/journal-writings/modernized/14-chapter-12.adoc
+++ b/journal-writings/modernized/14-chapter-12.adoc
@@ -131,8 +131,8 @@ and there hearken to that Divine voice which gives a clear and certain sound.
 I have felt in that which does not deceive, that if Friends who have known the Truth,
 keep in that tenderness of heart, where all views of outward gain are given up,
 and their trust is only on the Lord,
-he will graciously lead some to be patterns of deep self-
-denial in things relating to trade and handicraft labor;
+he will graciously lead some to be patterns of deep
+self-denial in things relating to trade and handicraft labor;
 and that some who have plenty of the treasures of this world,
 will set an example of a plain frugal life, and pay wages to such whom they may hire,
 more liberally than is now customary in some places.
