--- a/journal-writings/original/18-remarks.adoc
+++ b/journal-writings/original/18-remarks.adoc
@@ -549,8 +549,8 @@ many circumstances are omitted which would greatly aggravate it.
 We can refer to the most credible testimony for cases,
 where they have been afflicted with contagious diseases, especially the flux, when,
 says one of the witnesses,
-the floor of their prison was covered with blood and mucus like that of a slaughter-
-house.--See the Evidence before the Committee of Parliament before referred to.
+the floor of their prison was covered with blood and mucus like that of a
+slaughter-house.--See the Evidence before the Committee of Parliament before referred to.
 
 It is not surprising that these poor creatures,
 groaning under the horrors of such complicated misery should seek that relief in death,
