fix doubled punctuation

--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -201,7 +201,7 @@ so that if we continue in the word of Christ (previous to discipleship,
 John 8:31) and our conduct towards them be seasoned with his love,
 we may hope to see the good effect of it.
 This, in a good degree, is the case with some into whose hands they have fallen;
-but that too many treat them otherwise, not seeming conscious of any neglect.,
+but that too many treat them otherwise, not seeming conscious of any neglect,
 is alas! too evident.
 
 When self-love presides in our minds, our opinions are biassed in our own favour;
