remove archaic hyphens

--- a/journal-writings/modernized/11-chapter-9.adoc
+++ b/journal-writings/modernized/11-chapter-9.adoc
@@ -20,7 +20,7 @@ This man at the time appointed, did, by slight of hand, sundry things,
 which to those gathered, appeared strange.
 
 I heard of it next day, and understanding that the show was to be continued,
-and the people to meet about sun-set, I felt an exercise on that account:
+and the people to meet about sunset, I felt an exercise on that account:
 so I went to the public house in the evening,
 and told the man of the house that I had an
 inclination to spend a part of the evening there;
