--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -168,7 +168,7 @@ but the afflictions of his mystical body are yet unfinished;
 for they who are baptized into Christ are baptized into his death,
 and as we humbly abide under his sanctifying power,
 and are brought forth into newness of life, we feel Christ to live in us, who,
-being the same yesterday, to-day, and for ever, and always at unity with himself,
+being the same yesterday, today, and for ever, and always at unity with himself,
 his Spirit in the hearts of his people leads to
 an inward exercise for the salvation of mankind.
 When under a travail of spirit,
