update archaic spelling of connexion

--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -396,7 +396,7 @@ of more strong liquor than pure wisdom allows;
 this also, as it hinders the spreading of the spirit of meekness,
 and strengthens the hands of the more excessive drinkers, is a case to be lamented.
 
-As every degree of luxury hath some connexion with evil;
+As every degree of luxury hath some connection with evil;
 for those who profess to be disciples of Christ,
 and are looked upon as leaders of the people, to have that mind in them,
 which was also in Christ, and so stand separate from every wrong way,
