--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -119,7 +119,7 @@ be necessary for men`'s support in this world,
 as would, being rightly divided, be a suitable employment of their time;
 and that we cannot go into superfluities,
 or grasp after wealth in a way contrary to his wisdom,
-without having connexion with some degree of oppression,
+without having connection with some degree of oppression,
 and with that spirit which leads to self-exaltation and strife,
 and which frequently brings calamities on countries,
 by parties contending about their claims.
