--- a/journal-writings/original/16-various-subjects.adoc
+++ b/journal-writings/original/16-various-subjects.adoc
@@ -444,7 +444,7 @@ and an engagement to labour according to the gift bestowed on me,
 for promoting an humble, plain, temperate way of living:
 a life where no unnecessary cares or expenses may encumber our minds,
 or lessen our ability to do good; where no desires after riches,
-or greatness may lead into hard dealing; where no connexions with worldly minded men,
+or greatness may lead into hard dealing; where no connections with worldly minded men,
 may abate our love to God, or weaken a true zeal for righteousness:
 a life wherein we may diligently labour for resignedness to do
 and suffer whatever our heavenly Father may allot for us,
