--- a/journal-writings/original/12-chapter-10.adoc
+++ b/journal-writings/original/12-chapter-10.adoc
@@ -69,7 +69,7 @@ save only that the rum might be used in moderation;
 nor was this concern so weightily attended to, as I now believe it ought to have been.
 But of late years being further informed respecting the
 oppressions too generally exercised in these islands,
-and thinking often on the degrees there are in the connexions
+and thinking often on the degrees there are in the connections
 of interest and fellowship with the works of darkness, Eph. 5:11;
 and feeling an increasing concern to be wholly
 given up to the leadings of the Holy Spirit,
