update archaic spelling of staid

--- a/journal-writings/original/10-chapter-8.adoc
+++ b/journal-writings/original/10-chapter-8.adoc
@@ -580,7 +580,7 @@ I lay down in an humble bowed frame of mind, and had a comfortable night`'s lodg
 
 On the 15th day of the sixth month,
 we proceeded until the afternoon, when a storm appearing,
-we met our canoe at an appointed place and staid there all night;
+we met our canoe at an appointed place and stayed there all night;
 the rain continuing so heavy, that it beat through our tent and wet us and our baggage.
 
 On the 16th day,
