--- a/journal-writings/original/13-chapter-11.adoc
+++ b/journal-writings/original/13-chapter-11.adoc
@@ -102,7 +102,7 @@ and Friends having expressed their desire that I might
 have a place more convenient than the steerage,
 did not urge, but appeared disposed to leave me to the Lord.
 
-Having staid two nights in Philadelphia, I went the next day to Darby Monthly Meeting;
+Having stayed two nights in Philadelphia, I went the next day to Darby Monthly Meeting;
 where, through the strength of Divine love,
 my heart was enlarged toward the youth then present;
 under which I was helped to labour in some tenderness of spirit.
