proofreading corrections ch. 1-6 (#11)

--- a/journal-writings/modernized/01-testimony-yorkshire.adoc
+++ b/journal-writings/modernized/01-testimony-yorkshire.adoc
@@ -12,7 +12,7 @@ to visit Friends in this nation, and more especially us in the northern parts,
 undertook the same with the full concurrence and near
 sympathy of his friends and brethren at home,
 as appeared by certificates from the Monthly and Quarterly Meetings to which he belonged,
-and from the Spring-meeting of ministers and ciders, held at Philadelphia,
+and from the Spring-meeting of ministers and elders, held at Philadelphia,
 for Pennsylvania and New Jersey.
 
 He arrived in the city of London at the beginning of the last Yearly Meeting,
@@ -37,7 +37,7 @@ In the early part of his illness he requested a Friend to write,
 and then broke forth thus:
 "`O Lord my God! the amazing horrors of darkness were gathered
 around me and covered me all over and I saw no way to go forth.
-I felt the misery of my fellow-creatures separated from the Divine harmony
+I felt the misery of my fellow creatures separated from the Divine harmony
 and it was heavier than I could bear--I was crushed down under it.
 I lifted up my hand, and stretched out my arm, but there was none to help me.
 I looked round about and was amazed.
