--- a/journal-writings/modernized/03-chapter-1.adoc
+++ b/journal-writings/modernized/03-chapter-1.adoc
@@ -51,7 +51,7 @@ at first I was pleased with the exploit, but after a few minutes was seized with
 for having, in a sportive way,
 killed an innocent creature while she was careful for her young.
 I beheld her lying dead, and thought those young ones, for which she was so careful,
-must now perish for lack of their dam to nourish them;
+must now perish for lack of their mother to nourish them;
 and after some painful considerations on the subject, I climbed up the tree,
 took all the young birds and killed them,
 supposing that better than to leave them to pine away and die miserably; and believed,
@@ -207,7 +207,7 @@ I find no language equal to +++[+++describe]
 it, nor any means to convey to another a clear idea of it.
 I looked upon the works of God in this visible creation, and an awfulness covered me;
 my heart was tender and often contrite,
-and universal love to my fellow-creatures increased in me:
+and universal love to my fellow creatures increased in me:
 this will be understood by such who have trodden in the same path.
 
 Some glances of real beauty may be seen in their faces who dwell in true meekness.
@@ -224,7 +224,7 @@ and strong temptations to wrestle with;
 in the feeling whereof I frequently withdrew into private places,
 and often with tears besought the Lord to help me, whose gracious ear was open to my cry.
 
-All this time I lived with my parents, and wrought on the plantation;
+All this time I lived with my parents, and worked on the plantation;
 and having had schooling pretty well for a planter,
 I used to improve it in winter evenings, and other leisure times;
 and being now in the twenty-first year of my age, a man,
@@ -281,7 +281,7 @@ I felt a tender compassion for the youth,
 who remained entangled in snares like those
 which had entangled me from one time to another;
 this love and tenderness increased;
-and my mind was more strongly engaged for the good of my fellow-creatures.
+and my mind was more strongly engaged for the good of my fellow creatures.
 
 I went to meetings in an awful frame of mind,
 and endeavored to be inwardly acquainted with the language of the true Shepherd;
@@ -356,7 +356,7 @@ My employer having a negro woman, sold her, and desired me to write a bill of sa
 the man being waiting who bought her.
 The thing was sudden;
 and though the thoughts of writing an instrument of
-slavery for one of my fellow-creatures felt uneasy,
+slavery for one of my fellow creatures felt uneasy,
 yet I remembered that I was hired by the year,
 that it was my master who directed me to do it, and that it was an elderly man,
 a member of our Society, who bought her; so, through weakness, I gave way, and wrote it;
