--- a/journal-writings/modernized/04-chapter-2.adoc
+++ b/journal-writings/modernized/04-chapter-2.adoc
@@ -90,7 +90,7 @@ that things were made easy to me which had been otherwise.
 After some time, my employer`'s wife died; she was a virtuous woman,
 and generally beloved of her neighbors: and soon after this, he left shop-keeping;
 and we parted.
-I then wrought at my trade, as a tailor;
+I then worked at my trade, as a tailor;
 carefully attended meetings for worship and discipline
 and found an enlargement of Gospel love in my mind,
 and therein a concern to visit Friends in some of the
