--- a/journal-writings/modernized/05-chapter-3.adoc
+++ b/journal-writings/modernized/05-chapter-3.adoc
@@ -210,7 +210,7 @@ waiting daily to feel the life and virtue of it in their hearts,
 shall rejoice in the midst of adversity,`" and have to experience with the prophet,
 that "`Although the fig tree shall not blossom, neither shall fruit be in the vines;
 the labor of the olive shall fail, and the fields shall yield no meat;
-the flock shall be cut off`" from the fold, and there shall be no herd in the stall:
+the flock shall be cut off from the fold, and there shall be no herd in the stall:
 yet will they rejoice in the Lord, and joy in the God of their salvation.`"
 If, contrary to this, we profess the Truth,
 and not living under the power and influence of it,
@@ -273,8 +273,8 @@ I took notes; and among other things,
 he told me to which of his children he gave his young negro.
 I considered the pain and distress he was in, and knew not how it would end;
 so I wrote his will, save only that part concerning his slave,
-and carrying it to his bed-side, read it to him; and then told him in a friendly way,
-that I could not write any instruments by which my fellow-creatures were made slaves,
+and carrying it to his bedside, read it to him; and then told him in a friendly way,
+that I could not write any instruments by which my fellow creatures were made slaves,
 without bringing trouble on my own mind.
 I let him know that I charged nothing for what I had done;
 and desired to be excused from doing the other part in the way he proposed:
