--- a/journal-writings/modernized/06-chapter-4.adoc
+++ b/journal-writings/modernized/06-chapter-4.adoc
@@ -172,7 +172,7 @@ I further said, the present circumstances of these provinces to me appear diffic
 the slaves look like a burdensome stone to such who burden themselves with them,
 and that if the white people retain a resolution to prefer
 their outward prospects of gain to all other considerations,
-and do not act conscientiously toward them as fellow-creatures,
+and do not act conscientiously toward them as fellow creatures,
 I believe that burden will grow heavier and heavier,
 until times change in a way disagreeable to us.
 At this the person appeared very serious, and owned,
@@ -307,7 +307,7 @@ these are the souls for whom Christ died, and for our conduct toward them,
 we must answer before Him who is no respecter of persons.
 
 They who know the only true God, and Jesus Christ whom he has sent,
-and are thus acquainted with the merciful, benevolent.
+and are thus acquainted with the merciful, benevolent,
 Gospel spirit,
 will therein perceive that the indignation of
 God is kindled against oppression and cruelty;
@@ -562,7 +562,7 @@ signified that he wanted to talk with me concerning a difficulty he had been und
 and related it nearly as follows:
 That as monies had been raised by a tax of late years to carry on war,
 he had a scruple in his mind in regard to paying it,
-and chose rather to suffer distraint of his goods than pay it;
+and chose rather to suffer the seizure of his goods than pay it;
 and as he was the only person who refused it in those parts,
 and knew not that anyone else was in the like circumstances,
 he signified that it had been a heavy trial to him, and more so,
@@ -594,7 +594,7 @@ and though the manner in which we may be led may tend to our own abasement; yet,
 if we continue in patience and meekness, heavenly peace is the reward of our labors.
 
 From there I went to Curies meeting; which, though small,
-was reviving to the honest hearted.
+was reviving to the honest-hearted.
 From there to Black creek and Caroline meetings; from which,
 accompanied by William Stanley, before mentioned, we rode to Goose creek,
 being much through the woods, and about one hundred miles.
