--- a/journal-writings/modernized/08-chapter-6.adoc
+++ b/journal-writings/modernized/08-chapter-6.adoc
@@ -58,10 +58,10 @@ and make more labor for those on whom the burden of the work is laid.
 If selfish views or a partial spirit have any room in our minds,
 we are unfit for the Lord`'s work; if we have a clear prospect of the business,
 and proper weight on our minds to speak,
-it behoves us to avoid useless apologies and repetitions.
+it behooves us to avoid useless apologies and repetitions.
 Where people are gathered from afar,
 and adjourning a meeting of business is attended with great difficulty,
-it behoves all to be cautious how they detain a meeting;
+it behooves all to be cautious how they detain a meeting;
 especially when it has sat six or seven hours,
 and Friends have a great distance to ride home.
 
