--- a/journal-writings/original/01-testimony-yorkshire.adoc
+++ b/journal-writings/original/01-testimony-yorkshire.adoc
@@ -19,7 +19,7 @@ to visit Friends in this nation, and more especially us in the northern parts,
 undertook the same with the full concurrence and near
 sympathy of his friends and brethren at home,
 as appeared by certificates from the Monthly and Quarterly Meetings to which he belonged,
-and from the Spring-meeting of ministers and ciders, held at Philadelphia,
+and from the Spring-meeting of ministers and elders, held at Philadelphia,
 for Pennsylvania and New Jersey.
 
 He arrived in the city of London at the beginning of the last Yearly Meeting,
