--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -303,7 +303,7 @@ these are the souls for whom Christ died, and for our conduct toward them,
 we must answer before Him who is no respecter of persons.
 
 They who know the only true God, and Jesus Christ whom he hath sent,
-and are thus acquainted with the merciful, benevolent.
+and are thus acquainted with the merciful, benevolent,
 Gospel spirit,
 will therein perceive that the indignation of
 God is kindled against oppression and cruelty;
