update spelling: behove > behoove

--- a/journal-writings/original/15-keeping-negroes.adoc
+++ b/journal-writings/original/15-keeping-negroes.adoc
@@ -117,7 +117,7 @@ nor behaving themselves as faithful stewards,
 none who judge impartially can suppose them free from ingratitude.
 
 When a people dwell under the liberal distribution of favours from heaven,
-it behoves them carefully to inspect their ways,
+it behooves them carefully to inspect their ways,
 and consider the purposes for which those favours are bestowed, lest,
 through forgetfulness of God and misusing his gift, they incur his heavy displeasure,
 whose judgments are just and equal, who exalteth and humbleth to the dust,
