fix archaic spelling bed-side > bedside

--- a/journal-writings/original/05-chapter-3.adoc
+++ b/journal-writings/original/05-chapter-3.adoc
@@ -266,7 +266,7 @@ I took notes; and amongst other things,
 he told me to which of his children he gave his young negro.
 I considered the pain and distress he was in, and knew not how it would end;
 so I wrote his will, save only that part concerning his slave,
-and carrying it to his bed-side, read it to him; and then told him in a friendly way,
+and carrying it to his bedside, read it to him; and then told him in a friendly way,
 that I could not write any instruments by which my fellow-creatures were made slaves,
 without bringing trouble on my own mind.
 I let him know that I charged nothing for what I had done;
