--- a/journal-writings/original/14-chapter-12.adoc
+++ b/journal-writings/original/14-chapter-12.adoc
@@ -178,7 +178,7 @@ and they said amongst themselves,
 `"If Christ directed them to use us in this sort, then Christ is a cruel tyrant.`"
 
 All this time the song of the angel remained a mystery; and in the morning,
-my dear wife and some others coming to my bed-side, I asked them if they knew who I was;
+my dear wife and some others coming to my bedside, I asked them if they knew who I was;
 and they telling me I was John Woolman, thought I was light-headed:
 for I told them not what the angel said, nor was I disposed to talk much to any one;
 but was very desirous to get so deep, that I might understand this mystery.
