always hyphenate hard-hearted

--- a/journal-writings/modernized/18-remarks.adoc
+++ b/journal-writings/modernized/18-remarks.adoc
@@ -875,7 +875,7 @@ Thus it appears evident,
 that great numbers of these people are brought every year to an untimely end;
 many of them being persons who never injured us.
 
-Where the innocent suffer under hard hearted men, even unto death,
+Where the innocent suffer under hard-hearted men, even unto death,
 and the channels of equity are so obstructed,
 that the cause of the sufferers is not judged in righteousness,
 "`the land is polluted with blood.`"
