--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -159,7 +159,7 @@ To move and influence to action?
 To dwell in thee and walk in thee?
 Remember then thy station, as a being sacred to God;
 accept of the strength freely offered thee; and take heed that no weakness,
-in conforming to expensive, unwise and hard hearted customs,
+in conforming to expensive, unwise and hard-hearted customs,
 gendering to discord and strife, be given way to.
 Doth he claim my body as his temple?
 And graciously grant that I may be sacred to him.
