always hyphenate honest-hearted

--- a/journal-writings/original/06-chapter-4.adoc
+++ b/journal-writings/original/06-chapter-4.adoc
@@ -577,7 +577,7 @@ and though the manner in which we may be led may tend to our own abasement; yet,
 if we continue in patience and meekness, heavenly peace is the reward of our labours.
 
 From thence I went to Curies meeting; which, though small,
-was reviving to the honest hearted.
+was reviving to the honest-hearted.
 Thence to Black creek and Caroline meetings; from whence, accompanied by William Stanley,
 before mentioned, we rode to Goose creek, being much through the woods,
 and about one hundred miles.
