always hyphenate upright-hearted

--- a/journal-writings/original/19-epistle.adoc
+++ b/journal-writings/original/19-epistle.adoc
@@ -254,8 +254,8 @@ parts of the world have been exercised upon them?
 How mighty, as to the outward,
 is that power by which they have been borne down and oppressed?
 
-How deeply affecting is the condition of many upright
-hearted people who are taken into the papal inquisition?
+How deeply affecting is the condition of many upright-hearted
+people who are taken into the papal inquisition?
 What lamentable cruelties, in deep vaults, in a private way,
 are exercised on many of them?
 And how lingering is that death by a small slow fire,
