always hyphenate sincere-hearted

--- a/journal-writings/modernized/19-epistle.adoc
+++ b/journal-writings/modernized/19-epistle.adoc
@@ -237,7 +237,7 @@ and the pure leadings of the holy Spirit are less waited for and followed,
 so the true suffering seed is more and more oppressed.
 
 My mind is often affected with a sense of the condition
-of sincere hearted people in some kingdoms,
+of sincere-hearted people in some kingdoms,
 where liberty of conscience is not allowed,
 many of whom being burdened in their minds with the prevailing superstition,
 joined with oppressions, are often under sorrow;
