--- a/journal-writings/original/11-chapter-9.adoc
+++ b/journal-writings/original/11-chapter-9.adoc
@@ -271,7 +271,7 @@ It is observable in the History of the Reformation from Popery,
 that it had a gradual progress from age to age.
 The uprightness of the first reformers,
 in attending to the light and understanding given them,
-opened the way for sincere hearted people to proceed further afterward;
+opened the way for sincere-hearted people to proceed further afterward;
 and thus each one truly fearing God,
 and labouring in those works of righteousness appointed for them in their day,
 findeth acceptance with him.
