--- a/journal-writings/original/17-harmony.adoc
+++ b/journal-writings/original/17-harmony.adoc
@@ -311,7 +311,7 @@ He who was perfectly happy in himself, moved with infinite love,
 "`took not upon him the nature of angels,`" but our imperfect natures,
 and therein wrestled with the temptations which attend us in this life;
 and although he was the Son of Him who is greater than earthly princes,
-yet he became a companion to poor, sincere hearted men;
+yet he became a companion to poor, sincere-hearted men;
 and though he gave the clearest evidence that Divine power attended him,
 yet the most unfavourable constructions of his
 acts were framed by a self-righteous people;
